Fix nav scaling issue present on Safari

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -195,12 +195,6 @@ button:focus {
     color: #0000004d;
 }
 
-.highlightTextIn a:before
-{
-    -webkit-transform: scale(1.2);
-            transform: scale(1.2);
-} 
-
 .list-of-certificates-text {
   text-decoration: none;
   display: inline-block;
